--- a/index.html
+++ b/index.html
@@ -6,11 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catálogo Forestal</title>
-    <!--Link Hoja de estilos-->
-    <link rel="stylesheet" href="./css/estilos.css">
+
     <!-- link para vincilar una libreria de iconos tipograficos - Jam Icons-->
     <link rel="stylesheet" href="https://unpkg.com/jam-icons/css/jam.min.css">
 
+    <!-- Vincular framework bootstrap - Hoja de estilos CSS -->
+    <!-- Vinculando Bootstrap la hoja de estilos de CSS - Forma Rapida sin descargar (CDN) -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!--Link Hoja de estilos-->
+    <link rel="stylesheet" href="./css/estilos.css">
+   
 </head>
 
 
@@ -101,6 +107,10 @@
             </ul>
         </nav>
     </footer>
+ <!-- Vinculando Bootstrap la hoja de javascript JS - Forma Rapida sin descargar (CDN) -->
+ <!-- Vincular framework bootstrap - Hoja de javascript JS -->
+ <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
