--- a/paginas/Proyectos.html
+++ b/paginas/Proyectos.html
@@ -6,6 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos</title>
+    <!-- Vinculacion de Google Fonts - Roboto -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,100&display=swap"
+        rel="stylesheet">
+
+    <!-- link para vincilar una libreria de iconos tipograficos - Jam Icons-->
+    <link rel="stylesheet" href="https://unpkg.com/jam-icons/css/jam.min.css">
+
     <!--Link Hoja de estilos-->
     <link rel="stylesheet" href="../css/estilos.css">
 </head>
@@ -13,14 +22,14 @@
 <body>
     <header class="header">
 
-        <img class="quitar-fondo" src="../imagenes/LogoUTIM.png" alt="LogoUTIM" width="150" height="150">
+        <img class="quitar-fondo header__logo" src="../imagenes/LogoUTIM.png" alt="LogoUTIM" width="150" height="150">
         <h3 class="texto-titulo"> Universidad Tecnológica de Izúcar de Matamoros</h3>
-        <a href="#">
-            <span class="jam jam-menu header__icono"></span>
+       
+        <a href="#abierto" class="header__icono">
+            <span class="jam jam-menu"></span>
         </a>
 
-        <nav class="nav-header"> ¨
-            <!-- comente el codigo en CSS-->
+        <nav class="nav-header" id="abierto">
             <ul class="flexbox__nav">
                 <li class="nav__item">
                     <a href="../index.html">Inicio</a>
@@ -35,10 +44,29 @@
                 <li class="nav__item">
                     <a href="./Cursos.html">Cursos</a>
                 </li>
+                <li class="nav__item nav__item--oculto">
+                    <a href="#cerrado">❌</a>
+                </li>
             </ul>
         </nav>
     </header>
     <main class="main">
+        <section class="bootstrap1">
+            <div class="container">
+                <div class="row"> <!-- 12 columnas -->
+                    <div class="col-12 col-md-6">
+                        <video class="bootstrap1__video" src="videos/video-muestra-coder.mp4" width="300" height="300px" controls></video>
+                    </div>
+                    <div class="col-12 col-md-6">
+                        <h2 class="bootstrap1__titulo">Descargar la APP</h2>
+                        <img class="bootstrap1__imagen" src="../imagenes/cactaceas.jpg" alt="Play Store" width="100" height="100">
+                        <img class="bootstrap1__imagen" src="../imagenes/cuachalalate.jpeg" alt="App Store" width="100" height="100">
+                    </div>
+                    <!-- <div class="col-12 col-md-12">Columna 3</div> -->
+                </div>
+            </div>
+        </section>
+
         <h3>Manejo Integrado de Plagas</h3>
         <img src="../imagenes/plagas.jpg" alt="Plagas" width="250" height="150">
         <h5>Las plagas agrícolas pueden ser controladas eficazmente aplicando la estrategia de manejo integrado, una
